# parlant

server/: .gitignore  mypy.ini  pyproject.toml
server/src/emcie/server/: api.py  common.py  main.py  threads.py
server/src/emcie/server/api/: threads.py
server/tests/: test_api.py
