[tool.poetry]
name = "emcie-server"
version = "0.1.0"
description = ""
authors = ["Yam Marcovic <ymarcov@gmail.com>"]
readme = "README.md"
packages = [{include = "emcie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100